// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivateModDefinitionIdPage activate mod definition permissions 1`] = `
<DocumentFragment>
  <div>
    <div
      class="d-flex"
    >
      <div
        class="flex-grow-1"
      >
        <div>
          <div
            class="page-header"
          >
            <span
              class="page-title-icon bg-gradient-primary text-white mr-2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-store-alt fa-w-20 "
                data-icon="store-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M320 384H128V224H64v256c0 17.7 14.3 32 32 32h256c17.7 0 32-14.3 32-32V224h-64v160zm314.6-241.8l-85.3-128c-6-8.9-16-14.2-26.7-14.2H117.4c-10.7 0-20.7 5.3-26.6 14.2l-85.3 128c-14.2 21.3 1 49.8 26.6 49.8H608c25.5 0 40.7-28.5 26.6-49.8zM512 496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V224h-64v272z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <h3
                class="page-title"
              >
                Activate A Mod
              </h3>
              <div
                class="page-documentation"
              >
                <a
                  href="https://docs.pixiebrix.com/activating-mods"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-external-link-alt fa-w-16 "
                    data-icon="external-link-alt"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                      fill="currentColor"
                    />
                  </svg>
                   View Documentation
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="max-950"
    >
      <form
        class=""
        novalidate=""
      >
        <input
          disabled=""
          hidden=""
          type="submit"
        />
        <div
          class="card"
        >
          <div
            class="wizardHeader card-header"
          >
            <div
              class="wizardHeaderLayout"
            >
              <div
                class="wizardMainInfo"
              >
                <span
                  class="blueprintIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-cube fa-w-16 fa-fw fa-1x "
                    color="#241C32"
                    data-icon="cube"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M239.1 6.3l-208 78c-18.7 7-31.1 25-31.1 45v225.1c0 18.2 10.3 34.8 26.5 42.9l208 104c13.5 6.8 29.4 6.8 42.9 0l208-104c16.3-8.1 26.5-24.8 26.5-42.9V129.3c0-20-12.4-37.9-31.1-44.9l-208-78C262 2.2 250 2.2 239.1 6.3zM256 68.4l192 72v1.1l-192 78-192-78v-1.1l192-72zm32 356V275.5l160-65v133.9l-160 80z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  <div
                    class="card-title h5"
                  >
                    A Mod
                  </div>
                  <code
                    class="packageId"
                  >
                    test/blueprint-with-required-options
                  </code>
                </span>
              </div>
              <div
                class="wizardDescription"
              >
                Mod generated from factory
              </div>
            </div>
            <div
              class="activateButtonContainer"
            >
              <button
                class="text-nowrap btn btn-primary"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-magic fa-w-16 "
                  data-icon="magic"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224 96l16-32 32-16-32-16-16-32-16 32-32 16 32 16 16 32zM80 160l26.66-53.33L160 80l-53.34-26.67L80 0 53.34 53.33 0 80l53.34 26.67L80 160zm352 128l-26.66 53.33L352 368l53.34 26.67L432 448l26.66-53.33L512 368l-53.34-26.67L432 288zm70.62-193.77L417.77 9.38C411.53 3.12 403.34 0 395.15 0c-8.19 0-16.38 3.12-22.63 9.38L9.38 372.52c-12.5 12.5-12.5 32.76 0 45.25l84.85 84.85c6.25 6.25 14.44 9.37 22.62 9.37 8.19 0 16.38-3.12 22.63-9.37l363.14-363.15c12.5-12.48 12.5-32.75 0-45.24zM359.45 203.46l-50.91-50.91 86.6-86.6 50.91 50.91-86.6 86.6z"
                    fill="currentColor"
                  />
                </svg>
                 Activate
              </button>
            </div>
          </div>
          <div
            class="wizardBody card-body"
          >
            <div
              class="wizardBodyRow"
            >
              <div>
                <h4>
                  Permissions & URLs
                </h4>
              </div>
              <div>
                <p />
                <p>
                  No special permissions required
                </p>
                <p />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateModDefinitionIdPage activate mod definition with missing required mod definition options 1`] = `
<DocumentFragment>
  <div>
    <div
      class="d-flex"
    >
      <div
        class="flex-grow-1"
      >
        <div>
          <div
            class="page-header"
          >
            <span
              class="page-title-icon bg-gradient-primary text-white mr-2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-store-alt fa-w-20 "
                data-icon="store-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M320 384H128V224H64v256c0 17.7 14.3 32 32 32h256c17.7 0 32-14.3 32-32V224h-64v160zm314.6-241.8l-85.3-128c-6-8.9-16-14.2-26.7-14.2H117.4c-10.7 0-20.7 5.3-26.6 14.2l-85.3 128c-14.2 21.3 1 49.8 26.6 49.8H608c25.5 0 40.7-28.5 26.6-49.8zM512 496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V224h-64v272z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <h3
                class="page-title"
              >
                Activate Mod with Req...
              </h3>
              <div
                class="page-documentation"
              >
                <a
                  href="https://docs.pixiebrix.com/activating-mods"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-external-link-alt fa-w-16 "
                    data-icon="external-link-alt"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                      fill="currentColor"
                    />
                  </svg>
                   View Documentation
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="max-950"
    >
      <form
        class=""
        novalidate=""
      >
        <input
          disabled=""
          hidden=""
          type="submit"
        />
        <div
          class="card"
        >
          <div
            class="wizardHeader card-header"
          >
            <div
              class="wizardHeaderLayout"
            >
              <div
                class="wizardMainInfo"
              >
                <span
                  class="blueprintIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-cube fa-w-16 fa-fw fa-1x "
                    color="#241C32"
                    data-icon="cube"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M239.1 6.3l-208 78c-18.7 7-31.1 25-31.1 45v225.1c0 18.2 10.3 34.8 26.5 42.9l208 104c13.5 6.8 29.4 6.8 42.9 0l208-104c16.3-8.1 26.5-24.8 26.5-42.9V129.3c0-20-12.4-37.9-31.1-44.9l-208-78C262 2.2 250 2.2 239.1 6.3zM256 68.4l192 72v1.1l-192 78-192-78v-1.1l192-72zm32 356V275.5l160-65v133.9l-160 80z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  <div
                    class="card-title h5"
                  >
                    Mod with Required Options
                  </div>
                  <code
                    class="packageId"
                  >
                    test/blueprint-with-required-options
                  </code>
                </span>
              </div>
              <div
                class="wizardDescription"
              >
                Mod generated from factory
              </div>
            </div>
            <div
              class="activateButtonContainer"
            >
              <button
                class="text-nowrap btn btn-primary"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-magic fa-w-16 "
                  data-icon="magic"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224 96l16-32 32-16-32-16-16-32-16 32-32 16 32 16 16 32zM80 160l26.66-53.33L160 80l-53.34-26.67L80 0 53.34 53.33 0 80l53.34 26.67L80 160zm352 128l-26.66 53.33L352 368l53.34 26.67L432 448l26.66-53.33L512 368l-53.34-26.67L432 288zm70.62-193.77L417.77 9.38C411.53 3.12 403.34 0 395.15 0c-8.19 0-16.38 3.12-22.63 9.38L9.38 372.52c-12.5 12.5-12.5 32.76 0 45.25l84.85 84.85c6.25 6.25 14.44 9.37 22.62 9.37 8.19 0 16.38-3.12 22.63-9.37l363.14-363.15c12.5-12.48 12.5-32.75 0-45.24zM359.45 203.46l-50.91-50.91 86.6-86.6 50.91 50.91-86.6 86.6z"
                    fill="currentColor"
                  />
                </svg>
                 Activate
              </button>
            </div>
          </div>
          <div
            class="wizardBody card-body"
          >
            <div
              class="wizardBodyRow"
            >
              <div>
                <h4>
                  Configure Mod
                </h4>
              </div>
              <div
                class="formGroup form-group"
              >
                <div
                  class="mb-2 w-100 collapse"
                >
                  <div
                    class="annotationPlaceholder"
                  />
                </div>
                <label
                  class="label form-label"
                  for="optionsArgs.database"
                >
                  Database
                </label>
                <div
                  class="formField"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="field"
                    >
                      <div
                        class=" css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-2-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                          role="log"
                        />
                        <div
                          class=" css-13cymwt-control"
                        >
                          <div
                            class=" css-1fdsijx-ValueContainer"
                          >
                            <div
                              class=" css-1jqq78o-placeholder"
                              id="react-select-2-placeholder"
                            >
                              Select...
                            </div>
                            <div
                              class=" css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-activedescendant=""
                                aria-autocomplete="list"
                                aria-describedby="react-select-2-placeholder"
                                aria-expanded="false"
                                aria-haspopup="true"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class=""
                                id="react-select-2-input"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class=" css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class=" css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class=" css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="optionsArgs.database"
                          type="hidden"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="dropdown dropdown"
                      data-test-selected="Database"
                      data-testid="toggle-optionsArgs.database"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        class="dropdown-toggle btn btn-link"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="symbol"
                        >
                          <test-file-stub
                            classname="root"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="wizardBodyRow"
            >
              <div>
                <h4>
                  Permissions & URLs
                </h4>
              </div>
              <div>
                <p />
                <p>
                  No special permissions required
                </p>
                <p />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateModDefinitionIdPage renders 1`] = `
<DocumentFragment>
  <div>
    <div
      class="d-flex"
    >
      <div
        class="flex-grow-1"
      >
        <div>
          <div
            class="page-header"
          >
            <span
              class="page-title-icon bg-gradient-primary text-white mr-2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-store-alt fa-w-20 "
                data-icon="store-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M320 384H128V224H64v256c0 17.7 14.3 32 32 32h256c17.7 0 32-14.3 32-32V224h-64v160zm314.6-241.8l-85.3-128c-6-8.9-16-14.2-26.7-14.2H117.4c-10.7 0-20.7 5.3-26.6 14.2l-85.3 128c-14.2 21.3 1 49.8 26.6 49.8H608c25.5 0 40.7-28.5 26.6-49.8zM512 496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V224h-64v272z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <h3
                class="page-title"
              >
                Activate Mod 1
              </h3>
              <div
                class="page-documentation"
              >
                <a
                  href="https://docs.pixiebrix.com/activating-mods"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-external-link-alt fa-w-16 "
                    data-icon="external-link-alt"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                      fill="currentColor"
                    />
                  </svg>
                   View Documentation
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="max-950"
    >
      <form
        class=""
        novalidate=""
      >
        <input
          disabled=""
          hidden=""
          type="submit"
        />
        <div
          class="card"
        >
          <div
            class="wizardHeader card-header"
          >
            <div
              class="wizardHeaderLayout"
            >
              <div
                class="wizardMainInfo"
              >
                <span
                  class="blueprintIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-cube fa-w-16 fa-fw fa-1x "
                    color="#241C32"
                    data-icon="cube"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M239.1 6.3l-208 78c-18.7 7-31.1 25-31.1 45v225.1c0 18.2 10.3 34.8 26.5 42.9l208 104c13.5 6.8 29.4 6.8 42.9 0l208-104c16.3-8.1 26.5-24.8 26.5-42.9V129.3c0-20-12.4-37.9-31.1-44.9l-208-78C262 2.2 250 2.2 239.1 6.3zM256 68.4l192 72v1.1l-192 78-192-78v-1.1l192-72zm32 356V275.5l160-65v133.9l-160 80z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  <div
                    class="card-title h5"
                  >
                    Mod 1
                  </div>
                  <code
                    class="packageId"
                  >
                    test/mod-1
                  </code>
                </span>
              </div>
              <div
                class="wizardDescription"
              >
                Mod generated from factory
              </div>
            </div>
            <div
              class="activateButtonContainer"
            >
              <button
                class="text-nowrap btn btn-primary"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-magic fa-w-16 "
                  data-icon="magic"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224 96l16-32 32-16-32-16-16-32-16 32-32 16 32 16 16 32zM80 160l26.66-53.33L160 80l-53.34-26.67L80 0 53.34 53.33 0 80l53.34 26.67L80 160zm352 128l-26.66 53.33L352 368l53.34 26.67L432 448l26.66-53.33L512 368l-53.34-26.67L432 288zm70.62-193.77L417.77 9.38C411.53 3.12 403.34 0 395.15 0c-8.19 0-16.38 3.12-22.63 9.38L9.38 372.52c-12.5 12.5-12.5 32.76 0 45.25l84.85 84.85c6.25 6.25 14.44 9.37 22.62 9.37 8.19 0 16.38-3.12 22.63-9.37l363.14-363.15c12.5-12.48 12.5-32.75 0-45.24zM359.45 203.46l-50.91-50.91 86.6-86.6 50.91 50.91-86.6 86.6z"
                    fill="currentColor"
                  />
                </svg>
                 Activate
              </button>
            </div>
          </div>
          <div
            class="wizardBody card-body"
          >
            <div
              class="wizardBodyRow"
            >
              <div>
                <h4>
                  Permissions & URLs
                </h4>
              </div>
              <div>
                <p />
                <p>
                  No special permissions required
                </p>
                <p />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateModDefinitionIdPage renders instructions 1`] = `
<DocumentFragment>
  <div>
    <div
      class="d-flex"
    >
      <div
        class="flex-grow-1"
      >
        <div>
          <div
            class="page-header"
          >
            <span
              class="page-title-icon bg-gradient-primary text-white mr-2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-store-alt fa-w-20 "
                data-icon="store-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M320 384H128V224H64v256c0 17.7 14.3 32 32 32h256c17.7 0 32-14.3 32-32V224h-64v160zm314.6-241.8l-85.3-128c-6-8.9-16-14.2-26.7-14.2H117.4c-10.7 0-20.7 5.3-26.6 14.2l-85.3 128c-14.2 21.3 1 49.8 26.6 49.8H608c25.5 0 40.7-28.5 26.6-49.8zM512 496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V224h-64v272z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <h3
                class="page-title"
              >
                Activate Mod 6
              </h3>
              <div
                class="page-documentation"
              >
                <a
                  href="https://docs.pixiebrix.com/activating-mods"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-external-link-alt fa-w-16 "
                    data-icon="external-link-alt"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                      fill="currentColor"
                    />
                  </svg>
                   View Documentation
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="max-950"
    >
      <form
        class=""
        novalidate=""
      >
        <input
          disabled=""
          hidden=""
          type="submit"
        />
        <div
          class="card"
        >
          <div
            class="wizardHeader card-header"
          >
            <div
              class="wizardHeaderLayout"
            >
              <div
                class="wizardMainInfo"
              >
                <span
                  class="blueprintIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-cube fa-w-16 fa-fw fa-1x "
                    color="#241C32"
                    data-icon="cube"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M239.1 6.3l-208 78c-18.7 7-31.1 25-31.1 45v225.1c0 18.2 10.3 34.8 26.5 42.9l208 104c13.5 6.8 29.4 6.8 42.9 0l208-104c16.3-8.1 26.5-24.8 26.5-42.9V129.3c0-20-12.4-37.9-31.1-44.9l-208-78C262 2.2 250 2.2 239.1 6.3zM256 68.4l192 72v1.1l-192 78-192-78v-1.1l192-72zm32 356V275.5l160-65v133.9l-160 80z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  <div
                    class="card-title h5"
                  >
                    Mod 6
                  </div>
                  <code
                    class="packageId"
                  >
                    test/mod-6
                  </code>
                </span>
              </div>
              <div
                class="wizardDescription"
              >
                Mod generated from factory
              </div>
            </div>
            <div
              class="activateButtonContainer"
            >
              <button
                class="text-nowrap btn btn-primary"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-magic fa-w-16 "
                  data-icon="magic"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224 96l16-32 32-16-32-16-16-32-16 32-32 16 32 16 16 32zM80 160l26.66-53.33L160 80l-53.34-26.67L80 0 53.34 53.33 0 80l53.34 26.67L80 160zm352 128l-26.66 53.33L352 368l53.34 26.67L432 448l26.66-53.33L512 368l-53.34-26.67L432 288zm70.62-193.77L417.77 9.38C411.53 3.12 403.34 0 395.15 0c-8.19 0-16.38 3.12-22.63 9.38L9.38 372.52c-12.5 12.5-12.5 32.76 0 45.25l84.85 84.85c6.25 6.25 14.44 9.37 22.62 9.37 8.19 0 16.38-3.12 22.63-9.37l363.14-363.15c12.5-12.48 12.5-32.75 0-45.24zM359.45 203.46l-50.91-50.91 86.6-86.6 50.91 50.91-86.6 86.6z"
                    fill="currentColor"
                  />
                </svg>
                 Activate
              </button>
            </div>
          </div>
          <div
            class="wizardBody card-body"
          >
            <div>
              <h4>
                Activation Instructions
              </h4>
              <div>
                <p>
                  These are some instructions
                </p>
                

              </div>
            </div>
            <div
              class="wizardBodyRow"
            >
              <div>
                <h4>
                  Permissions & URLs
                </h4>
              </div>
              <div>
                <p />
                <p>
                  No special permissions required
                </p>
                <p />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateModDefinitionIdPage renders successfully with null services property 1`] = `
<DocumentFragment>
  <div>
    <div
      class="d-flex"
    >
      <div
        class="flex-grow-1"
      >
        <div>
          <div
            class="page-header"
          >
            <span
              class="page-title-icon bg-gradient-primary text-white mr-2"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-store-alt fa-w-20 "
                data-icon="store-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M320 384H128V224H64v256c0 17.7 14.3 32 32 32h256c17.7 0 32-14.3 32-32V224h-64v160zm314.6-241.8l-85.3-128c-6-8.9-16-14.2-26.7-14.2H117.4c-10.7 0-20.7 5.3-26.6 14.2l-85.3 128c-14.2 21.3 1 49.8 26.6 49.8H608c25.5 0 40.7-28.5 26.6-49.8zM512 496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V224h-64v272z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <h3
                class="page-title"
              >
                Activate Mod 2
              </h3>
              <div
                class="page-documentation"
              >
                <a
                  href="https://docs.pixiebrix.com/activating-mods"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-external-link-alt fa-w-16 "
                    data-icon="external-link-alt"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                      fill="currentColor"
                    />
                  </svg>
                   View Documentation
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="max-950"
    >
      <form
        class=""
        novalidate=""
      >
        <input
          disabled=""
          hidden=""
          type="submit"
        />
        <div
          class="card"
        >
          <div
            class="wizardHeader card-header"
          >
            <div
              class="wizardHeaderLayout"
            >
              <div
                class="wizardMainInfo"
              >
                <span
                  class="blueprintIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-cube fa-w-16 fa-fw fa-1x "
                    color="#241C32"
                    data-icon="cube"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M239.1 6.3l-208 78c-18.7 7-31.1 25-31.1 45v225.1c0 18.2 10.3 34.8 26.5 42.9l208 104c13.5 6.8 29.4 6.8 42.9 0l208-104c16.3-8.1 26.5-24.8 26.5-42.9V129.3c0-20-12.4-37.9-31.1-44.9l-208-78C262 2.2 250 2.2 239.1 6.3zM256 68.4l192 72v1.1l-192 78-192-78v-1.1l192-72zm32 356V275.5l160-65v133.9l-160 80z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  <div
                    class="card-title h5"
                  >
                    Mod 2
                  </div>
                  <code
                    class="packageId"
                  >
                    test/mod-2
                  </code>
                </span>
              </div>
              <div
                class="wizardDescription"
              >
                Mod generated from factory
              </div>
            </div>
            <div
              class="activateButtonContainer"
            >
              <button
                class="text-nowrap btn btn-primary"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-magic fa-w-16 "
                  data-icon="magic"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224 96l16-32 32-16-32-16-16-32-16 32-32 16 32 16 16 32zM80 160l26.66-53.33L160 80l-53.34-26.67L80 0 53.34 53.33 0 80l53.34 26.67L80 160zm352 128l-26.66 53.33L352 368l53.34 26.67L432 448l26.66-53.33L512 368l-53.34-26.67L432 288zm70.62-193.77L417.77 9.38C411.53 3.12 403.34 0 395.15 0c-8.19 0-16.38 3.12-22.63 9.38L9.38 372.52c-12.5 12.5-12.5 32.76 0 45.25l84.85 84.85c6.25 6.25 14.44 9.37 22.62 9.37 8.19 0 16.38-3.12 22.63-9.37l363.14-363.15c12.5-12.48 12.5-32.75 0-45.24zM359.45 203.46l-50.91-50.91 86.6-86.6 50.91 50.91-86.6 86.6z"
                    fill="currentColor"
                  />
                </svg>
                 Activate
              </button>
            </div>
          </div>
          <div
            class="wizardBody card-body"
          >
            <div
              class="wizardBodyRow"
            >
              <div>
                <h4>
                  Permissions & URLs
                </h4>
              </div>
              <div>
                <p />
                <p>
                  No special permissions required
                </p>
                <p />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
